--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
-body {
+* {
   margin: 0;
+  padding: 0;
+}
+
+body {
   width: 100%;
   height: 100%;
-  background: url(/images/space.jpg) center / cover no-repeat;
+  background: black;
 }
